--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start:dev": "nodemon ./src/server.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -13,7 +14,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
     "mongoose": "^8.18.3",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.7",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "openai": "^6.6.0"
   }
 }
