--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "mongoose": "^8.18.3",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.7",
-    "nodemon": "^3.1.10",
-    "openai": "^6.6.0"
+    "nodemon": "^3.1.10"
   }
 }
